--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,16 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc": "true"
-   },
-   "source": [
-    "# Table of Contents\n",
-    " <p><div class=\"lev1 toc-item\"><a href=\"#Cluster-Graph-Belief-Propagation\" data-toc-modified-id=\"Cluster-Graph-Belief-Propagation-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Cluster Graph Belief Propagation</a></div><div class=\"lev2 toc-item\"><a href=\"#About-this-notebook\" data-toc-modified-id=\"About-this-notebook-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>About this notebook</a></div><div class=\"lev2 toc-item\"><a href=\"#Modeling-Distributions\" data-toc-modified-id=\"Modeling-Distributions-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Modeling Distributions</a></div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Cluster Graph Belief Propagation"
@@ -32,7 +22,8 @@
     "id": "3459867a-644d-4757-abc4-bc88c1e998c9"
    },
    "source": [
-    "This notebook is a demonstration of the cluster graph belief propagation algorithm, implemented in Python 3.5 **without any libraries for probability calculations** in order to not hide any important information processing. The [pandas library](http://pandas.pydata.org/) is used to generally model a tabular distrubution and additional functions are added to provide computations that are relevant for probability theory."
+    "This notebook is a demonstration of the cluster graph belief propagation algorithm, implemented in Python 3.5 **without any libraries for probability calculations** in order to not hide any important information processing. The [pandas library](http://pandas.pydata.org/) is used to generally model a tabular distrubution and additional functions are added to provide computations that are relevant for probability theory.\n",
+    "\n"
    ]
   },
   {
@@ -48,25 +39,276 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The easiest way to represent distributions for this example is as joint distribution tables over a set of variables. The values do not have to probabilities, since the algorithm works also for markov random fields. Such a tabl\n",
+    "The easiest way to represent distributions for this example is as joint distribution tables over a set of variables. The values do not have to probabilities, since the algorithm works also for markov random fields. Below is an example of how such a table over the variables A and B could look like.\n",
     "\n",
-    "| a | b | P(A=a, B=b) |\n",
+    "| a | b | $\\phi$(A=a, B=b) |\n",
     "|---|---|---          |\n",
     "| $a_0$ | $b_0$ | 10  |\n",
     "| $a_0$ | $b_1$ | 0.1 |\n",
     "| $a_1$ | $b_0$ | 0.1 |\n",
     "| $a_1$ | $b_1$ | 5   |\n",
-    "\n"
+    "\n",
+    "For this example, we use the following (binary) variables:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "variables = {\n",
+    "    'A': [0, 1],\n",
+    "    'B': [0, 1],\n",
+    "    'C': [0, 1],\n",
+    "    'D': [0, 1]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating Tables\n",
+    "In order to create a couple of these tables and work with them, we make a function which creates an empty table over a set of variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def make_empty_table(variables, subset_keys = None, fill_value = 0):\n",
+    "    \"\"\"Creates an empty tabular distribution with rows for all combinations of variables.\n",
+    "    \n",
+    "        variables (dict): lists of values for every variable\n",
+    "        subset_keys: list of variables to include in the table\n",
+    "        fill_value: initialization value\n",
+    "        \n",
+    "    \"\"\"\n",
+    "    # if list of variables to pick is set but empty: return table with only one entry\n",
+    "    if subset_keys == []:\n",
+    "        return pd.DataFrame(fill_value, index = [0], columns = ['value'])\n",
+    "    \n",
+    "    # filter variable subset\n",
+    "    if subset_keys:\n",
+    "        variables = {key: variables[key] for key in subset_keys}\n",
+    "    \n",
+    "    # create a new pandas dataframe with rows for every combination of variable values in the subset\n",
+    "    # (by taking the cartesian product)\n",
+    "    varnames = sorted(variables.keys())\n",
+    "    i = pd.MultiIndex.from_product([variables[var] for var in varnames], names = varnames)\n",
+    "    return pd.DataFrame(fill_value, index = i, columns = ['value']).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The underlying usage of pandas dataframes allow for some complex use cases: Here are some examples.\n",
+    "\n",
+    "Note: the numbers in the first column are the row indices from pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   A  B  value\n",
+       "0  0  0      0\n",
+       "1  0  1      0\n",
+       "2  1  0      0\n",
+       "3  1  1      0"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "make_empty_table(variables, ['A', 'B'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>a0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>a0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>a1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>a1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>a2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>a2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    A  B  value\n",
+       "0  a0  0     42\n",
+       "1  a0  1     42\n",
+       "2  a1  0     42\n",
+       "3  a1  1     42\n",
+       "4  a2  0     42\n",
+       "5  a2  1     42"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "make_empty_table(\n",
+    "    variables = {\n",
+    "        'A': ['a0', 'a1', 'a2'],\n",
+    "        'B': [0, 1],\n",
+    "        'C': [0, 1, 2]}, \n",
+    "    subset_keys =['A', 'B'],\n",
+    "    fill_value = 42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   value\n",
+       "0      1"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "make_empty_table(variables, [], 1)"
+   ]
   },
   {
    "cell_type": "code",
@@ -102,7 +344,7 @@
    "number_sections": false,
    "sideBar": true,
    "threshold": 6,
-   "toc_cell": true,
+   "toc_cell": false,
    "toc_section_display": "block",
    "toc_window_display": true
   },
