Fixed line length errors. Use Jupyter nbextension "ruler" to show line lengths in code cells.

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -86,14 +86,14 @@
     "import pandas as pd\n",
     "\n",
     "def make_empty_table(variables, subset_keys = None, fill_value = 0):\n",
-    "    \"\"\"Creates an empty tabular distribution with rows for all combinations of variables.\n",
+    "    \"\"\"Creates an empty tabular distribution with rows for all variables.\n",
     "    \n",
     "        variables (dict): lists of values for every variable\n",
     "        subset_keys: list of variables to include in the table\n",
     "        fill_value: initialization value\n",
     "        \n",
     "    \"\"\"\n",
-    "    # if list of variables to pick is set but empty: return table with only one entry\n",
+    "    # if list of subset is set empty: return table with only one entry\n",
     "    if subset_keys == []:\n",
     "        return pd.DataFrame(fill_value, index = [0], columns = ['value'])\n",
     "    \n",
@@ -101,11 +101,14 @@
     "    if subset_keys:\n",
     "        variables = {key: variables[key] for key in subset_keys}\n",
     "    \n",
-    "    # create a new pandas dataframe with rows for every combination of variable values in the subset\n",
+    "    # create a new pandas dataframe\n",
+    "    # one row for every combination of variable values in the subset\n",
     "    # (by taking the cartesian product)\n",
     "    varnames = sorted(variables.keys())\n",
-    "    i = pd.MultiIndex.from_product([variables[var] for var in varnames], names = varnames)\n",
-    "    return pd.DataFrame(fill_value, index = i, columns = ['value']).reset_index()"
+    "    varvalues = [variables[var] for var in varnames]\n",
+    "    i = pd.MultiIndex.from_product(varvalues, names = varnames)\n",
+    "    df = pd.DataFrame(fill_value, index = i, columns = ['value']).reset_index()\n",
+    "    return df"
    ]
   },
   {
@@ -119,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -174,7 +177,7 @@
        "3  1  1      0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -254,7 +257,7 @@
        "5  a2  1     42"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -301,7 +304,7 @@
        "0      1"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
