--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -11,19 +11,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## About this notebook"
+    "## About this Notebook\n",
+    "\n",
+    "This notebook is a demonstration of the cluster graph belief propagation algorithm, implemented in Python 3.5 **without any libraries for probability calculations** in order to not hide any important information processing. The [pandas library](http://pandas.pydata.org/) is used to generally model a tabular distrubution and additional functions are added to provide computations that are relevant for probability theory.\n",
+    "\n",
+    "The programming here was done without specifying any classes. It rather relies on python's basic functional programming abilities in order to emphasize the data transformations that are going on in the algorithm. Thus this notebook does not provide a library in any way, but rather a tutorial on how Cluster Graph Belief Propagation works in practice and how it could be implemented with basic python code.\n",
+    "\n",
+    "Since we will need to call *reduce()* a couple of times for the functional approach and this is not included anymore by default in Python 3.5, we import it again."
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
-    "collapsed": false,
-    "focus": true,
-    "id": "3459867a-644d-4757-abc4-bc88c1e998c9"
+    "collapsed": true
    },
+   "outputs": [],
    "source": [
-    "This notebook is a demonstration of the cluster graph belief propagation algorithm, implemented in Python 3.5 **without any libraries for probability calculations** in order to not hide any important information processing. The [pandas library](http://pandas.pydata.org/) is used to generally model a tabular distrubution and additional functions are added to provide computations that are relevant for probability theory.\n",
-    "\n"
+    "from functools import reduce"
    ]
   },
   {
@@ -32,28 +37,30 @@
     "collapsed": true
    },
    "source": [
-    "## Modeling Distributions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The easiest way to represent distributions for this example is as joint distribution tables over a set of variables. The values do not have to probabilities, since the algorithm works also for markov random fields. Below is an example of how such a table over the variables A and B could look like.\n",
+    "## Modeling Factors\n",
+    "\n",
+    "The easiest way to represent factors for this example is as distribution tables over a set of variables. The values do not have to correspond to probabilities, since the algorithm works also for markov random fields. Below is an example of how such a table over the variables A and B could look like.\n",
     "\n",
     "| a | b | $\\phi$(A=a, B=b) |\n",
     "|---|---|---          |\n",
     "| $a_0$ | $b_0$ | 10  |\n",
     "| $a_0$ | $b_1$ | 0.1 |\n",
     "| $a_1$ | $b_0$ | 0.1 |\n",
-    "| $a_1$ | $b_1$ | 5   |\n",
+    "| $a_1$ | $b_1$ | 5   |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Variables\n",
     "\n",
-    "For this example, we use the following (binary) variables:"
+    "For this example, we use the following discrete (even binary in this case) random variables:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -72,12 +79,12 @@
    "metadata": {},
    "source": [
     "### Creating Tables\n",
-    "In order to create a couple of these tables and work with them, we make a function which creates an empty table over a set of variables."
+    "In order to create a couple of these tables and work with them, we make a function which creates an empty table over a set of variables. The additional parameters come in handy later. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -86,13 +93,15 @@
     "import pandas as pd\n",
     "\n",
     "def make_empty_table(variables, subset_keys = None, fill_value = 0):\n",
-    "    \"\"\"Creates an empty tabular distribution with rows for all variables.\n",
+    "    \"\"\"Creates an empty table-dataframe with rows for all variables.\n",
     "    \n",
     "        variables (dict): lists of values for every variable\n",
     "        subset_keys: list of variables to include in the table\n",
     "        fill_value: initialization value\n",
     "        \n",
+    "        returns: empty table-dataframe with a row for every variable combination\n",
     "    \"\"\"\n",
+    "    \n",
     "    # if list of subset is set empty: return table with only one entry\n",
     "    if subset_keys == []:\n",
     "        return pd.DataFrame(fill_value, index = [0], columns = ['value'])\n",
@@ -117,7 +126,7 @@
    "source": [
     "The underlying usage of pandas dataframes allow for some complex use cases: Here are some examples.\n",
     "\n",
-    "Note: the numbers in the first column are the row indices from pandas"
+    "Note: the numbers in the first column are the row indices that pandas generates automatically."
    ]
   },
   {
@@ -311,6 +320,595 @@
    ],
    "source": [
     "make_empty_table(variables, [], 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Accessing Values\n",
+    "\n",
+    "Usual queries for distributions look like, e.g. **P(A=0, B=1)**, but pandas dataframes are not designed to allow for such descriptive access. In oder to make reading and writing values more intuitive, we need additional function wrappers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "#### Reading Variable Names\n",
+    "\n",
+    "The first step is to access the actual random variables in a table-dataframe:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def column_varnames(columns):\n",
+    "    \"\"\"Extract the variable names from a columns object.\n",
+    "    \n",
+    "        columns: a dataframe-columns object\n",
+    "        \n",
+    "        returns: a list of variable names\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    return sorted([var for var in columns if var != 'value'])\n",
+    "\n",
+    "\n",
+    "\n",
+    "def table_varnames(tab):\n",
+    "    \"\"\"Extract the variable names from a table-dataframe.\n",
+    "    \n",
+    "        tab: a table-dataframe\n",
+    "        \n",
+    "        returns: a list of variable names\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    return column_varnames(tab.columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here are some examples of the usage:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   A  B  value\n",
+       "0  0  0      0\n",
+       "1  0  1      0\n",
+       "2  1  0      0\n",
+       "3  1  1      0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp_tab = make_empty_table(variables, ['A', 'B'])\n",
+    "tmp_tab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A', 'B']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table_varnames(tmp_tab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['A', 'B', 'value'], dtype='object')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp_tab.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A', 'B']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "column_varnames(tmp_tab.columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Selecting Rows\n",
+    "\n",
+    "The next step for accessing values is to get an actual reference on the values in the pandas dataframe. We want to access all rows, that contain a given assignment. So we first need to figure our for every row, if we actually want to include it. Since common variable assignments work as key-value-pair, we use a dictionary here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_row_bools(tab, assignment):\n",
+    "    \"\"\"For a given table and assignment, check which rows fit.\n",
+    "    \n",
+    "        tab: table-dataframe\n",
+    "        assignment (dict): variable assignment\n",
+    "        \n",
+    "        returns: table with booleans, indicating if the rows fit the assignment\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # look at the table column-wise and check for every column, which rows to\n",
+    "    # select for the given assignment\n",
+    "    row_bools_each_column = [\n",
+    "        tab[v] == assignment[v]\n",
+    "        for v in table_varnames(tab)\n",
+    "        if v in assignment.keys()\n",
+    "    ]\n",
+    "    \n",
+    "    # reduce the list for all columns with AND, yields the booleans for the\n",
+    "    # complete assignment\n",
+    "    return reduce(lambda x,y: x & y, row_bools_each_column)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Again an example, of what the function returns for a given table:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   A  B  value\n",
+       "0  0  0      0\n",
+       "1  0  1      0\n",
+       "2  1  0      0\n",
+       "3  1  1      0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp_tab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    False\n",
+       "1     True\n",
+       "2    False\n",
+       "3    False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_row_bools(tmp_tab, assignment={'A': 0, 'B': 1})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is also possible to specify incomplete assignments, resulting in a set of rows being selected:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     True\n",
+       "1     True\n",
+       "2    False\n",
+       "3    False\n",
+       "Name: A, dtype: bool"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_row_bools(tmp_tab, assignment={'A': 0})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Actual Access\n",
+    "\n",
+    "Now we can define a function to write values for a given variable assignment. This works with the pandas lable-indexer **.loc()**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def set_assignment(tab, assignment, value):\n",
+    "    \"\"\"Write values in table for variable assignment.\n",
+    "        \n",
+    "        tab: the table-dataframe\n",
+    "        assignment (dict): the variable assignment\n",
+    "        value: the value to put into all selected rows\n",
+    "    \"\"\"\n",
+    "    tab.loc[get_row_bools(tab, assignment), 'value'] = value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   A  B  value\n",
+       "0  0  0      0\n",
+       "1  0  1     42\n",
+       "2  1  0      0\n",
+       "3  1  1      0"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp_tab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   A  B  value\n",
+       "0  0  0      0\n",
+       "1  0  1     42\n",
+       "2  1  0      0\n",
+       "3  1  1      0"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set_assignment(tmp_tab, {'A': 0, 'B': 1}, 42)\n",
+    "tmp_tab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   A  B  value\n",
+       "0  0  0      0\n",
+       "1  0  1     42\n",
+       "2  1  0     -1\n",
+       "3  1  1     -1"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set_assignment(tmp_tab, {'A': 1}, -1)\n",
+    "tmp_tab"
    ]
   },
   {
